feat: Update CSV parsing logic and add regression test for orders sample